[project]
name = "pyant"
version = "0.0.1"
description = "Run xml formatted tasks"
authors = [
  {name = "Your Name", email = "your.name@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/jvhest/pyant"

[project.scripts]
run-pyant = "pyant.__main__:main"
